Added separate log file configuration

--- a/bio-migration-job/src/main/resources/application.properties
+++ b/bio-migration-job/src/main/resources/application.properties
@@ -38,4 +38,15 @@ crypto-path=C:\\migration\\map
 
 cron.expression=0 0/30 * * * ?
 
+logging.level.org.springframework=ERROR
+logging.level.com.seamfix.bio=DEBUG
+
+# Logging pattern for the console
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+# Logging pattern for file
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+logging.file=C:\\migration\\migration.log
+
 
