--- a/bio-migration-job/pom.xml
+++ b/bio-migration-job/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.seamfix.bio</groupId>
     <artifactId>bio-migration-job</artifactId>
-    <version>1.2.0-FINAL</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     
