--- a/bio-rdms-model/pom.xml
+++ b/bio-rdms-model/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.sf.biocloud</groupId>
             <artifactId>bc-model</artifactId>
-            <version>1.7.0-FINAL</version>
+            <version>2.0.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sf.bioregistra</groupId>
