--- a/bio-migration-job/src/main/resources/application.properties
+++ b/bio-migration-job/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-logging.level.org.springframework=ERROR
 spring.datasource.url=jdbc:postgresql://localhost:5433/bioreg
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -38,8 +37,10 @@ crypto-path=C:\\migration\\map
 
 cron.expression=0 0/3 * * * ?
 
+# Max log size 10MB * 3 files = 30MB
+logging.file.max-history=3
 logging.level.org.springframework=ERROR
-logging.level.com.seamfix.bio=DEBUG
+logging.level.com.seamfix.bio=INFO
 
 # Logging pattern for the console
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
