--- a/bio-rdms-model/pom.xml
+++ b/bio-rdms-model/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.sf.bioregistra</groupId>
             <artifactId>br-model</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.11.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
@@ -82,7 +82,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>http://singlewindow.seamfix.com:7997/nexus/content/groups/public</url>
+            <url>http://68.169.50.86:7997/nexus/content/groups/public</url>
         </repository>
         <repository>
             <id>maven2-repository.java.net</id>
