Added migration for shifts in employee attendance

--- a/bio-migration-job/src/main/resources/application.properties
+++ b/bio-migration-job/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/bioreg
+spring.datasource.url=jdbc:postgresql://localhost:5432/bioreg
 spring.datasource.username=postgres
 spring.datasource.password=password
 
@@ -33,7 +33,7 @@ mongo-ssl=true
 mongo-replicaset=rs0
 mongo-authsource=admin
 mongo-authmechanism=SCRAM-SHA-1
-crypto-path=C:\\migration\\map
+crypto-path=/Users/mokoye/Documents/sf-projects/map
 
 cron.expression=0 0/3 * * * ?
 
@@ -48,6 +48,6 @@ logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 # Logging pattern for file
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
-logging.file=C:\\migration\\migration.log
+logging.file=/Users/mokoye/Documents/sf-projects/map/migration.log
 
 
